# Todo-app-fullstack

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  hackathoon2.md  speckit.specify  speckit.tasks
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/api/: auth.py  tasks.py
backend/app/core/: config.py
backend/app/database/: __init__.py  database.py  init_db.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/schemas/: auth.py  task.py
backend/frontend/: CLAUDE.md
frontend/: jest.config.js  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AddTaskForm.tsx  EditTaskModal.tsx  Header.tsx  TaskItem.tsx  TaskList.tsx
frontend/components/ui/: Button.tsx  Input.tsx
frontend/lib/: api.ts  auth.ts  constants.ts
frontend/src/__tests__/components/: AddTaskForm.loading.test.tsx  TaskItem.error.test.tsx  TaskItem.loading.test.tsx  TaskItem.test.tsx
history/prompts/001-console-todo-app/: 0001-console-todo-app-spec.spec.prompt.md
history/prompts/constitution/: 1-constitution-generation.constitution.prompt.md  2-constitution-update.constitution.prompt.md
phase1/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  pyproject.toml  run_test.py
phase1/src/: constants.py  display.py  main.py  models.py  task_manager.py
phase1/tests/: test_imports.py  test_models.py  test_task_manager.py  test_validation.py
prompts/: 001-task-generation.md
specs/: constitution.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: graphql.schema.graphql  openapi.yaml
specs/002-full-stack-app/: architecture.md  database-schema.md  features-authentication.md  features-task-crud.md  plan.md  spec.md  tasks.md  ui-pages-and-components.md
specs/002-full-stack-app/checklists/: requirements.md
