[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-console-app"
version = "0.1.0"
description = "Console-based todo application for Phase I"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1"
]

[project.scripts]
todo-app = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]